# study

./: .gitignore  README.md  pyproject.toml  superscript.py
.github/workflows/: ci.yml
tests/: test_myscript.py  test_superscript.py
